oauth2-proxy/overlays/svc2/service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy-svc2
spec:
  selector:
    app: oauth2-proxy-svc2
